--- a/Kinetics of CV-NaOH Reaction (1310).ipynb
+++ b/Kinetics of CV-NaOH Reaction (1310).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -10,7 +10,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd04c7b8731a4d088e58739054e94333",
+       "model_id": "555b777bd9704f738af363430c044abc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -23,6 +23,7 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "import ipysheet\n",
     "from ipywidgets import HBox\n",
     "import math\n",
@@ -36,9 +37,9 @@
     "R = constants.value(\"molar gas constant\")\n",
     "\n",
     "times_rt = [i * 5 for i in range(61)]\n",
-    "abs_r1 = [0 for t in times_rt]\n",
-    "abs_r2 = [0 for t in times_rt]\n",
-    "abs_r3 = [0 for t in times_rt]\n",
+    "abs_r1 = [0.9 * math.exp(-0.0024 * t) + np.random.normal(scale = 0.01)  for t in times_rt]\n",
+    "abs_r2 = [0.85 * math.exp(-0.0012 * t) + np.random.normal(scale = 0.01)  for t in times_rt]\n",
+    "abs_r3 = [0.75 * math.exp(-0.0024 * t) + np.random.normal(scale = 0.01) for t in times_rt]\n",
     "\n",
     "table1 = ipysheet.sheet(rows = 61, columns = 4, column_headers = [\"Time (s)\", \"Absorbance (Run 1)\",\n",
     "                                                                  \"Absorbance (Run 2)\", \"Absorbance (Run 3)\"])\n",
@@ -51,13 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6067d39416024b8c8c7cf14a5dc9fa1e",
+       "model_id": "94cc08306ae547388482ce50d878d04c",
        "version_major": 2,
        "version_minor": 0
       },
